<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/prakashimage"
        android:layout_width="310dp"
        android:layout_height="300dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:src="@drawable/prakash_image"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:text="@string/find_a_perfect"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="23dp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints,RtlCompat" />
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/job_match"
        android:textColor="@color/black"
        android:textSize="23dp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/find_your_dream_job_with_us_at"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/prakash_group_of_companies"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/let_s_get_started"
        android:layout_gravity="center"/>

</LinearLayout>