<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcomeback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:text="@string/welcome_back"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints,RtlCompat" />

        <TextView
            android:id="@+id/t2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:text="@string/fill_your_details_or_continue"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/t3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:text="@string/with_social_media"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout

                style="@style/style_input_text_layout"
                android:layout_marginHorizontal="@dimen/dimen_30dp"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:hint="@string/Email_or_phone" >

                <com.google.android.material.textfield.TextInputEditText
                    style = "@style/text_input_edittext"
                    android:id="@+id/email_phone"
                    android:inputType="textEmailAddress"
                    android:nextFocusDown="@id/password"
                    android:imeOptions="actionNext"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="8dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/style_input_text_layout"
                android:layout_marginHorizontal="@dimen/dimen_30dp"
                android:hint="@string/Password"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/text_input_edittext"
                    android:id="@+id/password"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="8dp"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="@dimen/dimen_5dp"
                android:layout_marginRight="@dimen/dimen_20dp"
                android:padding="@dimen/dimen_10dp"
                android:text="@string/forgot_password"
                android:textColor="#F49301"
                android:textSize="14dp"
                android:textStyle="bold" />

            <FrameLayout
                android:id="@+id/login_button"
                android:layout_width="@dimen/dimen_200dp"
                android:layout_height="@dimen/dimen_50dp"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_30dp"
                android:background="@drawable/custum_button"
                android:backgroundTint="#F49301">

                <TextView
                    style="@style/login_text"
                    android:id="@+id/login_textview"
                    android:text = "Log In"/>

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="@dimen/dimen_30dp"
                    android:layout_height="@dimen/dimen_30dp"
                    android:indeterminateDrawable="@drawable/progressbar_xml"
                    android:layout_gravity="center"
                    android:visibility="invisible" />

            </FrameLayout>
            <TextView
                android:id="@+id/textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/or_continue_with"
                android:textAlignment="center"
                android:textColor="#9C9A9A"
                android:textSize="16dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_70dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/google_logo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:backgroundTint="#C4C4C4"
                    app:icon="@drawable/google_icon"
                    app:iconTint="@null" />

                <Button
                    android:id="@+id/linkedin_logo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="20dp"
                    android:backgroundTint="#C4C4C4"
                    app:icon="@drawable/linkedin_logo"
                    app:iconTint="@null" />

                <Button
                    android:id="@+id/azure_logo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:backgroundTint="#C4C4C4"
                    app:icon="@drawable/azure_logo"
                    app:iconTint="@null" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TXT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_25dp"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="#9C9A9A"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dimen_10dp"
                    android:text="@string/signup_now"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
