<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activity.RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:text="@string/register_account"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints,RtlCompat" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:text="@string/fill_your_details_or_continue"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:text="@string/with_social_media"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="@dimen/dimen_30dp"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_marginEnd="@dimen/dimen_5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/FirstName">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/text_input_edittext"
                    android:id="@+id/firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F0EDED"
                    android:imeOptions="actionNext"
                    android:drawableLeft="@drawable/ic_baseline_person_24"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_marginStart="@dimen/dimen_5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/lastName">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/text_input_edittext"
                    android:id="@+id/lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F0EDED"
                    android:imeOptions="actionNext"
                    android:drawableLeft="@drawable/ic_baseline_person_24"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
           style = "@style/style_input_text_layout"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:hint="@string/Email_or_phone">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/text_input_edittext"
                android:id="@+id/email_phone_layout"
                android:nextFocusDown="@id/password_Layout"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="8dp"
             />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/dimen_3dp"
            style="@style/style_input_text_layout"
            android:layout_marginBottom="@dimen/dimen_5dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/text_input_edittext"
                android:id="@+id/password_Layout"
                android:hint="@string/Password"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="8dp"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
              />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/RadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_50dp"
                android:checked="true"
                android:text="Male"
                android:theme="@style/RadioButtonStyle" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_50dp"
                android:layout_marginLeft="@dimen/dimen_100dp"
                android:text="Female"
                android:theme="@style/RadioButtonStyle" />
        </RadioGroup>
        <FrameLayout
            android:id="@+id/signup"
            android:layout_width="@dimen/dimen_200dp"
            android:layout_height="@dimen/dimen_50dp"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:background="@drawable/custum_button"
            android:backgroundTint="#F49301">

            <TextView
                style = "@style/login_text"
                android:id="@+id/sign_up_textview"
                android:text = "sign_up"/>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="@dimen/dimen_30dp"
                android:layout_height="@dimen/dimen_30dp"
                android:indeterminateDrawable="@drawable/progressbar_xml"
                android:layout_gravity="center"
                android:visibility="invisible" />

        </FrameLayout>

        <TextView
            android:id="@+id/textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/or_continue_with"
            android:textAlignment="center"
            android:textColor="#9C9A9A"
            android:textSize="16dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_70dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/google_logo"
                android:layout_width="@dimen/dimen_50dp"
                android:layout_height="@dimen/dimen_50dp"
                android:backgroundTint="#C4C4C4"
                app:icon="@drawable/google_icon"
                app:iconTint="@null" />

            <Button
                android:id="@+id/linkedin_logo"
                android:layout_width="@dimen/dimen_50dp"
                android:layout_height="@dimen/dimen_50dp"
                android:layout_marginHorizontal="20dp"
                android:backgroundTint="#C4C4C4"
                app:icon="@drawable/linkedin_logo"
                app:iconTint="@null" />

            <Button
                android:id="@+id/azure_logo"
                android:layout_width="@dimen/dimen_50dp"
                android:layout_height="@dimen/dimen_50dp"
                android:backgroundTint="#C4C4C4"
                app:icon="@drawable/azure_logo"
                app:iconTint="@null" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_30dp"
                android:text="@string/already_have_an_account"
                android:textColor="#9C9A9A"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dimen_50dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:text="@string/log_in"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>

