<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="homefragment"
    android:padding="16dp"
    android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageview"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="right"
        android:layout_marginBottom="10dp"
        android:contentDescription="/todo"
        android:background="@drawable/custum_circle"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_40dp"
            android:background="@drawable/custom_search"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:hint="Search Here"
            android:paddingStart="@dimen/dimen_15dp"
            android:nextFocusDown="@id/recyclerview"
            android:imeOptions="actionNext"
            android:layout_weight="1"
            app:showAsAction="collapseActionView|always"
            app:actionViewClass="android.support.v7.widget.SearchView"
            app:iconifiedByDefault="false"/>

<!--        <ImageButton-->
<!--            android:id="@+id/button_search"-->
<!--            android:layout_width="50dp"-->
<!--            android:layout_height="49dp"-->
<!--            app:cardCornerRadius="@dimen/dimen_10dp"-->
<!--            android:layout_marginStart="@dimen/dimen_20dp"-->
<!--            android:background="@drawable/button_search"-->
<!--            android:src="@drawable/ic_baseline_search_24"-->
<!--            android:contentDescription="Search" />-->

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popular_jobs"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
       />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       />
    <TextView
        android:id="@+id/textview_datanotfound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No Data Found"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:visibility="invisible"
/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_company_list"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/dimen_100dp"
            android:layout_weight="0"
            android:text="@string/total_vacancy"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/verticalrecyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    />


</LinearLayout>